radarr_server/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: jellyfin
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
