radarr_server/radarr-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr-network-policy
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: radarr
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: jellyfin
      ports:
        - protocol: TCP
          port: 8096
